bugfix: overflow auto only for root body element

--- a/css/style.less
+++ b/css/style.less
@@ -48,7 +48,9 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	overflow: auto;
+	&.lms-ui-main-document {
+		overflow: auto;
+	}
 	height: calc(100vh - 4em);
 
 	&.fullscreen-popup {
